-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.11
-
None
-
-
7135945d0 (dev)
-
2D Vector Graphics 2025 43
To reproduce, run svgtoqml on the QtSvg/tests/baseline/data/extended_features/mask.svg file. Note that only the rectangle item is showing. Removing the translation of other items makes them show, so this is apparently related to applying a transform to the masked item itself.
- is required for
-
QTBUG-140736 Vector image format support in Qt
-
- Open
-
For Gerrit Dashboard: QTBUG-141168 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
684862,3 | Support masked items with transforms | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |